@@ -18,6 +18,7 @@ Bugfixes:
   it can bind to socket.
 * libhsm: fixed incorrect label length for wildcards (leftmost wildcard label was
   included in count).
+* Fix semantics of refresh value in Signer Engine.
 
 
 OpenDNSSEC 1.0.0 - 2010-02-09
